# arch-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  docker_build.sh  pyproject.toml  run_prod_stack.sh
.github/workflows/: build.yml  deploy_docker.yml
arch_api/: __main__.py  app.py  db.py  docker-compose-prod.yml  exceptions.py  splitting.py
arch_api/models/: geojson.py  geometry.py  io.py
src/: app.py  db.py
tests/: conftest.py  test_app.py  visualize_testcases.py
tests/cases/: 1.json
tests/cases/1/: building_limits.geojson  height_plateaus.geojson
tests/integration/: conftest.py  test_integration.py
tests/models/: test_geojson.py  test_geometry.py  test_io.py
tests/testcases/invalid_inner_ring_not_covering/: height_plateaus.geojson
tests/testcases/invalid_not_covering/: building_limits.geojson  height_plateaus.geojson
tests/testcases/invalid_not_covering2/: building_limits.geojson  height_plateaus.geojson
tests/testcases/invalid_overlapping_building_limits/: building_limits.geojson  height_plateaus.geojson
tests/testcases/invalid_overlapping_height_plateaus/: height_plateaus.geojson
tests/testcases/valid_covering/: building_limits.geojson
tests/testcases/valid_inner_ring_coinciding/: building_limits.geojson  height_plateaus.geojson
tests/testcases/valid_inner_ring_stripes/: building_limits.geojson
tests/testcases/vaterlandsparken/: height_plateaus.geojson
tests/unit/models/: conftest.py  test_geojson.py
tests/unit/splitting/: conftest.py  test_splitting.py
